--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MahendraPachipala.github.io/word_counter_Task1",
+  "homepage": "https://udaysaimanoj123.github.io/word_counter",
   "name": "word_count",
   "version": "0.1.0",
   "private": true,
